--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply p-3 flex flex-row items-center justify-center gap-2 rounded-full text-sm bg-slate-50 text-gray-800;
+  @apply p-3 flex flex-row items-center justify-center gap-2 rounded-full text-sm bg-slate-50 text-gray-800 flex-shrink;
   transition: all ease-out 100ms;
 }
 
@@ -8,7 +8,7 @@
 }
 
 .ghost {
-  @apply border-0;
+  @apply bg-white bg-opacity-20 text-white backdrop-blur-0;
 }
 
 .ghost:hover {
