Apply dynamic styles for project cards

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,17 +3,9 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 0, 0, 0;
+  --background-end-rgb: 0, 0, 0;
 }
 
 body {
@@ -28,6 +20,10 @@ body {
 
 h2 {
   @apply text-3xl my-8 font-semibold;
+}
+
+p {
+  @apply text-lg;
 }
 
 blockquote {
