--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,3 +1,15 @@
 .root {
-  @apply: "bg-zinc-900 rounded-2xl w-full h-[600px] border border-zinc-800 relative overflow-hidden";
+  @apply bg-zinc-900 rounded-2xl w-full h-[600px] relative overflow-hidden;
+}
+
+.cardInfo {
+  @apply bg-black bg-opacity-80 absolute top-0 left-0 right-0 bottom-0 flex flex-col justify-end p-10 opacity-0 hover:opacity-100 transition-all;
+}
+
+.imageOuterWrapper {
+  @apply p-4 w-full h-full;
+}
+
+.imageInnerWrapper {
+  @apply relative w-full h-full;
 }
