--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -3,5 +3,9 @@
 }
 
 .container {
-  @apply flex flex-col gap-4 items-center mx-auto my-24 uppercase text-center max-w-4xl  mb-24;
+  @apply flex flex-col gap-4 items-center mx-auto my-24 text-center max-w-4xl  mb-24;
+}
+
+.heading {
+  @apply text-7xl font-semibold uppercase;
 }
