--- a/src/components/ProjectCard/ProjectCard.module.css
+++ b/src/components/ProjectCard/ProjectCard.module.css
@@ -1,5 +1,5 @@
 .root {
-  @apply bg-zinc-900 rounded-2xl w-full h-[600px] relative overflow-hidden;
+  @apply bg-zinc-900 rounded-2xl w-full h-[400px] relative overflow-hidden md:h-[600px];
 }
 
 .cardInfo {
@@ -12,4 +12,8 @@
 
 .imageInnerWrapper {
   @apply relative w-full h-full;
+}
+
+.cardHeading {
+  @apply text-2xl md:text-5xl;
 }
